tests/cases/pass/arith_precedence.cs
class Program { static void Main() { Console.WriteLine(1 + 2 * 3); } }
