tests/cases/fail/if_string_condition.cs
class Program { static void Main() { if ("x") { Console.WriteLine(1); } } }
